@@ -1,6 +1,7 @@
 package com.kuganappa.wishlist.repository;
 
 import com.kuganappa.wishlist.model.User;
+import com.kuganappa.wishlist.repository.rowMappers.UserRowMapper;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.jdbc.support.GeneratedKeyHolder;
@@ -15,21 +16,14 @@ import java.util.List;
 @Repository
 public class UserRepository {
     private final JdbcTemplate jdbc;
+    private final UserRowMapper rowMapper = new UserRowMapper();
 
     public UserRepository(JdbcTemplate jdbc) {
         this.jdbc = jdbc;
     }
 
-    public final RowMapper<User> rowMapper = (rs, rowNum) ->
-            new User(
-                    rs.getString("userName"),
-                    rs.getString("email"),
-                    rs.getString("password"),
-                    rs.getObject("dateOfBirth", LocalDate.class)
-            );
-
     public List<User> getAllUsers() {
-        return jdbc.query("SELECT * FROM users", rowMapper);
+        return jdbc.query("SELECT * FROM users",rowMapper);
     }
 
     public void createUser(User user) {
@@ -57,12 +51,18 @@ public class UserRepository {
     public User getUserFromName(String userName) {
         List<User> list = jdbc.query(
                 "SELECT * FROM users WHERE userName = ?", rowMapper, userName);
-        return list.isEmpty() ? null : list.getFirst();
+        return list.isEmpty() ? null : list.get(0);
     }
 
     public User getUserFromId(int userId) {
         List<User> list = jdbc.query(
                 "SELECT * FROM users WHERE userId = ?", rowMapper, userId);
-        return list.isEmpty() ? null : list.getFirst();
+        return list.isEmpty() ? null : list.get(0);
+    }
+
+    public User getUserFromEmail(String email) {
+        List<User> list = jdbc.query(
+                "SELECT * FROM users WHERE email = ?", rowMapper, email);
+        return list.isEmpty() ? null : list.get(0);
     }
 }
